# gas_build_system

./: .gitignore  CMakeLists.txt  build.bat  clean.bat  readme.md  run.bat
doc/: building.md  project.md  project.xmind
src/main/cpp/: main.cpp
src/main/cpp/gas/bs/: artefact.cpp  artefact.hpp  config.cpp  config.hpp  task.cpp  task.hpp
